# Stratolink

./: .gitignore  LICENSE  LICENSE_OPTIONS.md  PARTNERSHIPS.md  README.md  SETUP.md  setup_repo.bat  setup_repo.sh  vercel.json
assets/images/: LOGO_INSTRUCTIONS.md  README.md
firmware/: DOCUMENTATION.md  README.md  flash_firmware.bat  platformio.ini
firmware/boards/: stratolink.json
firmware/include/: board.h  config.h  gps_ublox.h  lorawan.h  mic_acoustic.h  power_adc.h  secrets.h.example  sensor_lis2dh12.h  sensor_ltr390.h  sensor_ms5611.h  sensor_tmp117.h  sensors.h  stratolink_pins.h  telemetry.h
firmware/src/: gps_ublox.cpp  lorawan.cpp  main.cpp  mic_acoustic.cpp  power_adc.cpp  power_manager.cpp  power_manager.h  region_manager.cpp  region_manager.h  sensor_lis2dh12.cpp  sensor_ltr390.cpp  sensor_ms5611.cpp  sensor_tmp117.cpp  sensors.cpp  telemetry.cpp
firmware/test/: audio_capture.cpp  board_test.cpp  capture_audio.py  decode_results.py  sdr_gateway.py  sdr_listen.py  ttn_listener.py
hardware/: README.md
hardware/gerbers/: project.db
hardware/pcb/: #auto_saved_files#  drc-final.json  drc-report.json  erc-final.json  erc-report.json  fp-info-cache  stratolink.kicad_pcb  stratolink.kicad_pro  stratolink.kicad_sch  ~stratolink.kicad_pcb.lck
hardware/pcb/lib/: 4269.dcm  (+63 more)
simulation/: pyproject.toml
simulation/balloon_sim/: __init__.py  balloon.py  constants.py  coordinates.py  coverage.py  fleet.py  trajectory.py  wind.py
simulation/balloon_sim/visualization/: __init__.py  animation.py  kepler.py  plots.py
simulation/notebooks/: balloon_demo.ipynb
simulation/tests/: __init__.py  test_coordinates.py  test_coverage.py  test_trajectory.py
web/: .env.local.example  INSTALL.md  SETUP_GUIDE.md  SUPABASE_NEXT_STEPS.md  SUPABASE_SETUP.md  figma-capture.mjs  next.config.js  package-lock.json  package.json  supabase_schema.sql
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ErrorBoundary.tsx  MissionMap.tsx  MissionSidebar.tsx  MissionTimeline.tsx  QRCodeScanner.tsx  altitude-control.tsx  applications.tsx  balloon-diagram.tsx  contact.tsx  dashboard-showcase.tsx  data-section.tsx  faq.tsx  footer.tsx  future-applications.tsx  hero.tsx  how-it-works.tsx  mission.tsx  navigation.tsx  partners.tsx  pilot-program.tsx  roadmap.tsx  trust-strip.tsx  video-showcase.tsx  workflow-diagram.tsx
web/hooks/: use-mobile.tsx
web/lib/: supabase.ts
(+52 files in other folders)
