[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balloon-sim"
version = "0.1.0"
description = "Stratospheric balloon trajectory simulation with wind-driven physics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Stratolink Simulation Team"}
]
keywords = [
    "balloon",
    "simulation",
    "stratosphere",
    "trajectory",
    "coverage",
    "wind",
    "NCEP",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "xarray>=0.19.0",
    "netcdf4>=1.5.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
viz = [
    "cartopy>=0.20.0",
    "scipy>=1.7.0",
]
kepler = [
    "keplergl>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "balloon-sim[viz,kepler,dev]",
]

[project.urls]
Homepage = "https://github.com/stratolink/balloon-sim"
Documentation = "https://github.com/stratolink/balloon-sim#readme"
Repository = "https://github.com/stratolink/balloon-sim"

[tool.setuptools.packages.find]
where = ["."]
include = ["balloon_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
